--- a/packages/react-mutation-mapper/package.json
+++ b/packages/react-mutation-mapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-mutation-mapper",
-  "version": "0.6.7",
+  "version": "0.6.7-alpha.0",
   "description": "Generic Mutation Mapper",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -47,7 +47,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.11",
     "mobxpromise": "github:cbioportal/mobxpromise#v1.0.2",
-    "oncokb-styles": "~0.1.2",
+    "oncokb-styles": "~0.2.0-alpha.1",
     "oncokb-ts-api-client": "^1.1.0",
     "react-collapse": "^4.0.3",
     "react-if": "^2.1.0",
